# release_SlideMan_v1

./: .coveragerc  .gitignore  CLAUDE.md  CURRENT_ARCHITECTURE_ANALYSIS.md  FULL_FUNCTIONALITY_COMPLETE.md  FULL_FUNCTIONALITY_IMPLEMENTATION_GUIDE.md  GUI_REDESIGN_ANSWERS.md  GUI_REDESIGN_PROCESS_REPORT.md  GUI_REDESIGN_QUESTIONS.md  NEW_VISION.md  PHASE2_HANDOVER.md  PHASE3_HANDOVER.md  PHASE4_HANDOVER.md  README.md  SLIDEMAN_COMPLETE_APP_UX_GUIDE.md  SLIDEMAN_UX_PHILOSOPHY_GUIDE.md  SLIDEMAN_UX_TRANSFORMATION_REPORT.md  UX_TRANSFORMATION_COMPLETE.md  ai_visual_mockups.html  big_CHAT.md  big_CHAT_2.md  debug_app.py  diagnose_crash.py  diagnose_mainwindow.py  main.py  migrate_phase1.py  phase1_refactoring_summary.md  pyproject.toml  pytest.ini  requirements.txt  slideman-ux-improvements.md  slideman.iss  slideman.spec  slideman_prezi_complete_vision.html  slideman_prezi_unified_design.html  slideman_user_workflows_analysis.html  test_minimal.py
.claude/: settings.local.json
docs/: api_reference.md  architecture.md  gui_refactoring_plan.md  md_to_html.py  md_to_pdf.py  phase1_architecture_implementation.md  slideman_pitch.html  slideman_pitch.md
reports/: build_process_summary.md  claude_sonnet_3.7_pre_polish_analysis.html  claude_sonnet_3.7_pre_polish_analysis.md  packaging_guide.md  phase_1_report.md  phase_2_report.md  phase_3_report.md  phase_4_completion_report.md  phase_4_report.md  phase_5_6_mixed_report.md  phase_7_report.md  phase_8_report.md  slideman_architectural_analysis.md  slideman_architecture_analysis_claude.md
research_docs/: architecture.md  (+10 more)
(+305 files in other folders)
